// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charts Items Should able to add from multiple shops 1`] = `
Array [
  Object {
    "id": 1,
    "productId": 1,
    "productName": "MacBook Pro 16 2020",
    "productPrice": 2500,
    "quantity": 1,
    "shopId": 1,
    "shopName": "Putra Mahkota",
    "subTotal": 2500,
  },
  Object {
    "id": 2,
    "productId": 4,
    "productName": "MacBook Pro 16 2020",
    "productPrice": 2100,
    "quantity": 1,
    "shopId": 2,
    "shopName": "Ali Shop",
    "subTotal": 2100,
  },
]
`;

exports[`Charts Items Should add item properly 1`] = `
Array [
  Object {
    "id": 1,
    "productId": 1,
    "productName": "MacBook Pro 16 2020",
    "productPrice": 2500,
    "quantity": 1,
    "shopId": 1,
    "shopName": "Putra Mahkota",
    "subTotal": 2500,
  },
  Object {
    "id": 2,
    "productId": 2,
    "productName": "Li-Ion Battery",
    "productPrice": 250,
    "quantity": 2,
    "shopId": 1,
    "shopName": "Putra Mahkota",
    "subTotal": 500,
  },
  Object {
    "id": 3,
    "productId": 3,
    "productName": "M3 SSD 1TB",
    "productPrice": 900,
    "quantity": 2,
    "shopId": 1,
    "shopName": "Putra Mahkota",
    "subTotal": 1800,
  },
]
`;

exports[`Charts Items Should merge item quantity when added twice 1`] = `
Array [
  Object {
    "id": 1,
    "productId": 1,
    "productName": "MacBook Pro 16 2020",
    "productPrice": 2500,
    "quantity": 5,
    "shopId": 1,
    "shopName": "Putra Mahkota",
    "subTotal": 12500,
  },
]
`;
